envoy/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.http_grpc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
              common_config:
                log_name: "api_access_logs"
                transport_api_version: V3
                grpc_service:
                  envoy_grpc:
                    cluster_name: billing_sidecar
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/api/keys" }
                route: 
                  cluster: api_key_service
                metadata:
                  filter_metadata:
                    envoy.filters.http.ext_authz:
                      disabled: true
              - match: { prefix: "/" }
                route: 
                  cluster: backend_service
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              http_service:
                server_uri:
                  uri: http://api-key-service:8080
                  cluster: api_key_service
                  timeout: 1s
                path_prefix: /auth
              failure_mode_allow: false
              include_peer_certificate: true
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: api_key_service
    connect_timeout: 1s
    type: logical_dns
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: api_key_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api-key-service
                port_value: 8080

  - name: backend_service
    connect_timeout: 1s
    type: logical_dns
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: backend_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend-service
                port_value: 3000

  - name: billing_sidecar
    connect_timeout: 1s
    type: logical_dns
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: billing_sidecar
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: billing-sidecar
                port_value: 8081
